<resources>
    <string name="app_name">Almacen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Perfil</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btnLogin_Text">Ingresar</string>
    <string name="btnRequestUnlock">Solicitar desbloqueo</string>
    <string name="menu_logout">Salir</string>
    <string name="store_name">Eva91</string>
    <string name="warehouse_txt">Logística</string>
    <string name="txt_logout">Cerrando sesión...</string>
    <string name="tv_placeholder">placeholderText</string>
    <string name="btnShowDetails">Ver</string>
    <string name="menu_operators">Operarios</string>
    <string name="user_Enabled">Habilitado</string>
    <string name="user_Disabled">Deshabilitado</string>
    <string name="btnUnlockText">Desbloquear</string>
    <string name="lblDni">DNI:</string>
    <string name="lblPhone">Teléfono:</string>
    <string name="lblEmail">E-mail:</string>
    <string name="lblSchedule">Horario:</string>
    <string name="btnUpdateUser">Modificar datos del operario</string>
    <string name="btnDeleteUser">Eliminar operario</string>
    <string name="btnCommitUpdate">Guardar cambios</string>
    <string name="btnAddOperator">Agregar operario</string>
    <string name="btnSaveNewUser">Registrar operario</string>
    <string name="btnCancelNewUser">Cancelar</string>
    <string name="newOperatorLabel">Nuevo operario</string>
    <string name="txtLoading">Cargando...</string>
    <string name="hintDni"># del DNI</string>
    <string name="hintPhone"># de teléfono</string>
    <string name="hintFirstName">Nombres</string>
    <string name="hintLastName">Apellidos</string>
    <string name="hintEmail">correo@email.com</string>
    <string name="hintScheduleID">Código de horario</string>
    <string name="btnShowItemDetail">Detalle</string>
    <string name="btnAddItem">Agregar item</string>
    <string name="itemDetailLabel">Detalle del item</string>
    <string name="menu_inventory">Inventario</string>
    <string name="inventoryLabel">Inventario</string>
    <string name="queryOperatorHint">Nombres o apellidos...</string>
    <string name="queryItemHint">Nombre, marca o código...</string>
    <string name="lblBrand">Marca:</string>
    <string name="lblItemDescription">Descripción:</string>
    <string name="lblItemPrice">Precio:</string>
    <string name="lblItemBarcode">Código:</string>
    <string name="lblItemStock">Stock:</string>
    <string name="lblItemStockMin">Stock mínimo:</string>
    <string name="btnDeleteItem">Eliminar item</string>
    <string name="btnUpdateItem">Modificar datos del item</string>
    <string name="lblItemDetProvider">Proveedor:</string>
    <string name="newItemName">Nombre del item</string>
    <string name="newItemBrandHint">Marca</string>
    <string name="newItemBarcodeHint">Código</string>
    <string name="newItemProviderHint">Proveedor</string>
    <string name="newItemDescHint">Descripción</string>
    <string name="newItemPriceHint">Precio</string>
    <string name="newItemStockHint">Stock actual</string>
    <string name="newItemStockMinHint">Stock mínimo</string>
    <string name="btnNewItemCancel">Cancelar</string>
    <string name="btnSaveNewItem">Registrar item</string>
    <string name="lblUserProfilePassword">Contraseña nueva: </string>
    <string name="userProfilePasswordHint">*********</string>
    <string name="btnUpdatePassword">Actualizar contraseña</string>
    <string name="btnAddRequest">Agregar Solicitud</string>
    <string name="lblNavNewItem">Nuevo ítem</string>
</resources>