<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_admin">

    <fragment
        android:id="@+id/nav_home_admin"
        android:name="com.idat.almacen.ui.home_admin.HomeAdminFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.idat.almacen.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.idat.almacen.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout"/>
    <fragment
        android:id="@+id/nav_operators"
        android:name="com.idat.almacen.ui.operators.OperatorsFragment"
        android:label="@string/menu_operators"
        tools:layout="@layout/fragment_operators" />
    <fragment
        android:id="@+id/nav_operator_detail"
        android:name="com.idat.almacen.ui.operator_detail.OperatorDetailFragment"
        android:label="Detalle de opeario" />
</navigation>