<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/operator_navigation"
    app:startDestination="@+id/nav_home_operator">

    <fragment
        android:id="@+id/nav_home_operator"
        android:name="com.idat.almacen.ui.home_operator.HomeOperatorFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_operator" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.idat.almacen.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.idat.almacen.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout"/>
</navigation>
