<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/lblUserProfilePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/lblUserProfilePassword"
        android:textColor="@android:color/primary_text_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userProfileNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:hint="@string/userProfilePasswordHint"
        android:importantForAccessibility="no"
        android:inputType="textNoSuggestions"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lblUserProfilePassword"
        app:layout_constraintTop_toTopOf="@+id/lblUserProfilePassword" />

    <Button
        android:id="@+id/btnUpdatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/btnUpdatePassword"
        app:layout_constraintStart_toStartOf="@+id/lblUserProfilePassword"
        app:layout_constraintTop_toBottomOf="@+id/lblUserProfilePassword" />

</androidx.constraintlayout.widget.ConstraintLayout>